# pglance

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: rust-checks.yml
src/: lib.rs  tests.rs
src/fdw/: attach_namespace.rs  scan.rs  sync_namespace.rs
src/write/: aggregate.rs  append.rs  delete.rs  index.rs  merge_insert.rs  metadata.rs  mod.rs  optimize.rs  pg_to_arrow.rs  storage.rs  vacuum.rs
tests/: benchmark_merge_index.sh  benchmark_uuid_merge_index.sh  benchmark_write.sql  e2e_admin_maintenance.sh  e2e_index_management.sh  e2e_lance_duckdb.sql
tests/sql/: 00_smoke.slt  10_write_append_create.slt  11_write_append_modes.slt  12_write_delete.slt  13_write_merge_insert.slt  14_write_roundtrip.slt  15_write_txn_rollback.slt  16_write_types_roundtrip.slt  17_write_errors.slt  18_admin_maintenance.slt  19_index_management.slt  20_column_aggregates.slt  21_table_metadata.slt
