[package]
name = "pglance"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "lance"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pglance"
path = "./src/bin/pgrx_embed.rs"



[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = ["tempfile", "sqllogictest"]

[dependencies]
pgrx = "=0.14.3"
lance_rs = { package = "lance", version = "7.0.0" }
lance-index = "7.0.0"
lance-namespace = "7.0.0"
lance-namespace-impls = { version = "7.0.0", features = ["rest"] }
arrow = "58.0.0"
arrow-schema = "58.0.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.22"
sqllogictest = { version = "=0.29.0", optional = true }

[dev-dependencies]
pgrx-tests = "=0.14.3"
tempfile = "3.8"
sqllogictest = "=0.29.0"

[dependencies.tempfile]
version = "3.8"
optional = true

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
